--- a/src/main/resources/view/maze-app-view.fxml
+++ b/src/main/resources/view/maze-app-view.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?><?import javafx.scene.layout.GridPane?><?import javafx.scene.layout.HBox?><?import javafx.scene.layout.VBox?><?import javafx.scene.layout.ColumnConstraints?><?import javafx.scene.layout.Pane?><?import javafx.scene.control.Slider?><?import javafx.geometry.Insets?><?import javafx.scene.control.Button?><?import javafx.scene.image.ImageView?><?import javafx.scene.image.Image?><?import javafx.scene.layout.StackPane?>
+<?import javafx.geometry.Insets?><?import javafx.scene.control.*?><?import javafx.scene.image.*?><?import javafx.scene.layout.*?>
 <VBox
     spacing="20.0"
     maxWidth="Infinity"
@@ -26,7 +26,7 @@
         <ImageView>
             <fitWidth>20</fitWidth>
             <preserveRatio>true</preserveRatio>
-            <Image url="@../img/icon.png" />
+            <Image url="@/img/icon.png" />
         </ImageView>
         <Label HBox.hgrow="ALWAYS" maxWidth="10" />
         <Label
@@ -44,7 +44,7 @@
             <ImageView>
                 <fitHeight>18</fitHeight>
                 <preserveRatio>true</preserveRatio>
-                <Image url="@../img/minimize.png" />
+                <Image url="@/img/minimize.png" />
             </ImageView>
         </StackPane>
         <StackPane
@@ -57,12 +57,12 @@
             <ImageView fx:id="iconMaximize">
                 <fitHeight>18</fitHeight>
                 <preserveRatio>true</preserveRatio>
-                <Image url="@../img/maximize.png" />
+                <Image url="@/img/maximize.png" />
             </ImageView>
             <ImageView fx:id="iconRestore" visible="false">
                 <fitHeight>18</fitHeight>
                 <preserveRatio>true</preserveRatio>
-                <Image url="@../img/restore.png" />
+                <Image url="@/img/restore.png" />
             </ImageView>
         </StackPane>
         <StackPane
@@ -75,7 +75,7 @@
             <ImageView>
                 <fitHeight>18</fitHeight>
                 <preserveRatio>true</preserveRatio>
-                <Image url="@../img/close.png" />
+                <Image url="@/img/close.png" />
             </ImageView>
         </StackPane>
     </HBox>
